# Agent-Foundry

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: laguage.mdc
.github/workflows/: ci.yml  publish.yml
afm/: __main__.py  cli.py
afm/config/: settings.py
afm/core/: api_client.py  installer.py  loader.py  registry.py  tool_reader.py  tool_registry.py  tools.py
afm/plugins/hello_world/: manifest.json  plugin.py
docs/: USAGE_TOOL_READER.md  USAGE_TOOL_REGISTRY.md
tests/: test_cli.py
