[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-foundry"
version = "0.1.0"
description = "Agent Foundry Manager: LLM Agent toolkit manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "importlib_metadata",
    "rich",
]

[project.scripts]
afm = "afm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["afm*"]


